--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -37,5 +37,8 @@ user_group_list: "{{ user_group_name }},apache"
 # Edit the `templates/sudoers.tpl` accordingly.
 user_sudo: true
 
+# Add passwordless sudo (true | false).
+user_passwordless_sudo: false
+
 # TODO
 user_authorized_keys: ''
