Add authorized keys

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -40,5 +40,8 @@ user_sudo: true
 # Add passwordless sudo (true | false).
 user_passwordless_sudo: false
 
-# TODO
-user_authorized_keys: ''
+# Add the URL of your public keys, like:
+# user_authorized_keys: "https://github.com/USERNAME.keys"
+# or add a local file, like:
+# user_authorized_keys: "{{ lookup('file', '/root/.ssh/id_rsa.pub') }}"
+user_authorized_keys: ""
