--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -42,13 +42,9 @@
       group: "{{ user_group_name }}"
       mode: 0755
 
-  - name: Create {{ user_name }}'s authorized keys file
-    copy:
-      dest: "{{ user_home }}/.ssh/authorized_keys"
-      owner: "{{ user_name }}"
-      group: "{{ user_name }}"
-      content: "{{ user_authorized_keys }}"
-      mode: 0644
+  - authorized_key:
+      user: "{{ user_name }}"
+      key: "{{ user_authorized_keys }}"
 
   - name: Give {{ user_name }} user sudo
     template:
