Update user, group

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,19 +1,19 @@
 ---
 
-  - name: Create group {{ user_group_name }} with custom GID
+  - name: Create group {{ user_group_name }} with custom GID {{ user_group_gid }}
     group:
       name: "{{ user_group_name }}"
       state: present
       gid: "{{ user_group_gid }}"
-    when: user_group_gid
+    when: user_group_gid != ""
 
   - name: Create group {{ user_group_name }}
     group:
       name: "{{ user_group_name }}"
       state: present
-    when: not user_group_gid
+    when: user_group_gid == ""
 
-  - name: Create {{ user_name }} user with custom UID
+  - name: Create {{ user_name }} user with custom UID {{ user_uid }}
     user:
       name: "{{ user_name }}"
       shell: "{{ user_shell }}"
@@ -23,7 +23,7 @@
       home: "{{ user_home }}"
       generate_ssh_key: yes
       uid: "{{ user_uid }}"
-    when: user_uid
+    when: user_uid != ""
 
   - name: Create {{ user_name }} user
     user:
@@ -34,7 +34,7 @@
       system: yes
       home: "{{ user_home }}"
       generate_ssh_key: yes
-    when: not user_uid
+    when: user_uid == ""
 
   - name: Ensure home directory {{ user_home }} is owned by {{ user_name }} user
     file:
@@ -65,4 +65,4 @@
       owner: "{{ user_name }}"
       group: "{{ user_group_name }}"
       mode: 0711
-    when: user_name=="aegir"
+    when: user_name == "aegir"
