--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,14 +3,14 @@
 # The default variables was defined in order to create the `aegir` user.
 #
 # This role can create any type of users but it was initially designed to create
-# the `aegir`user that is needed by the:
+# the `aegir` user that is needed by the:
 # [Aegir hosting system](http://www.aegirproject.org/)
 
 # Define the user's name.
 user_name: aegir
 
 # User's ID (UID). If you leave it empty the OS will pick one for the user.
-user_uid:
+user_uid: ""
 
 # User's shell.
 user_shell: /bin/bash
@@ -25,7 +25,7 @@ user_group_name: "{{ user_name }}"
 
 # User's group ID (GID). If you leave it empty the OS will pick one for the
 # group.
-user_group_gid:
+user_group_gid: ""
 
 # Define a primary group for the user.
 user_group_primary: apache
@@ -34,7 +34,10 @@ user_group_primary: apache
 # spaces (string,string,...).
 # If you defined a `{{ user_group_name }}` you should add it in the list bellow.
 # Otherwise it will not assigned automatically.
-user_group_list: "{{ user_group_name }},apache"
+# Finally, do not add the `{{ user_group_primary }}` because Ansible will always
+# trigger `changed`. For more info:
+# [Ansible GitHub issue](https://github.com/ansible/ansible/issues/6854)
+user_group_list: "{{ user_group_name }}"
 
 # Give `sudo` privilages to the user (true | false).
 # Edit the `templates/sudoers.tpl` accordingly.
