Improve authorized keys

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -49,5 +49,5 @@ user_passwordless_sudo: false
 # Add the URL of your public keys, like:
 # user_authorized_keys: "https://github.com/USERNAME.keys"
 # or add a local file, like:
-# user_authorized_keys: "{{ lookup('file', '/root/.ssh/id_rsa.pub') }}"
+# user_authorized_keys: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
 user_authorized_keys: ""
