--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -44,7 +44,8 @@
       group: "{{ user_group_name }}"
       mode: 0755
 
-  - authorized_key:
+  - name: Adds SSH authorized keys to {{ user_name }}
+    authorized_key:
       user: "{{ user_name }}"
       key: "{{ user_authorized_keys }}"
 
